hphp/hack/test/typecheck/is_expression/merge_is_good.php.like_types.exp
File "merge_is_good.php", line 17, characters 10-11:
Invalid return type (Typing[4110])
File "merge_is_good.php", line 9, characters 45-45:
Expected B
File "merge_is_good.php", line 13, characters 21-24:
But got T#2 from this is expression test
File "merge_is_good.php", line 6, characters 25-25:
  via this generic T
